--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,34 +1,31 @@
-name: Upload Python Package to PyPI
+name: Publish Python Package
 
 on:
   push:
     tags:
       - "v*"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
-  build-and-publish:
-    name: Build and publish package
+  build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install build tools
-        run: |
-          pip install build twine
+        run: pip install build
 
-      - name: Build package
+      - name: Build the package
         run: python -m build
 
-      - name: Publish to PyPI
-      
-        run: twine upload dist/*
+      - name: Publish to PyPI via Trusted Publishing
+        uses: pypa/gh-action-pypi-publish@release/v1
